Remove build dato and EULA check