@@ -2,17 +2,13 @@ package org.bukkit.craftbukkit;
 
 import java.io.File;
 import java.io.IOException;
-import java.net.URL;
 import java.text.SimpleDateFormat;
 import java.util.Arrays;
-import java.util.Calendar;
-import java.util.Date;
-import java.util.Enumeration;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
-import java.util.jar.Manifest;
 import java.util.logging.Level;
 import java.util.logging.Logger;
+
 import joptsimple.OptionParser;
 import joptsimple.OptionSet;
 import net.minecraft.server.MinecraftServer;
@@ -43,31 +39,11 @@ public class Main {
             }
         }
 
-        System.err.println( "This PaperSpigot build supports Minecraft clients both of versions 1.7.x and of 1.8.x.\n"
+        System.err.println( "This ClipSpigot build supports Minecraft clients both of versions 1.7.x and of 1.8.x.\n"
                 + "*** It is imperative that backups be taken before running this build on your server! ***\n"
-                + "Please report any such issues to the PaperSpigot project, stating your client, server, and if applicable BungeeCord versions.\n"
+                + "Please report any such issues to the ClipSpigot project, stating your client, server, and if applicable BungeeCord versions.\n"
                 + "*** Any bug reports not running the very latest versions of these softwares will be ignored ***\n\n" );
 
-        Enumeration<URL> resources = Main.class.getClassLoader().getResources( "META-INF/MANIFEST.MF" );
-        while ( resources.hasMoreElements() )
-        {
-            Manifest manifest = new Manifest( resources.nextElement().openStream() );
-            String ts = manifest.getMainAttributes().getValue( "Timestamp" );
-            if ( ts != null )
-            {
-                Date buildDate = new SimpleDateFormat( "yyyyMMdd-hhmm" ).parse( ts );
-
-                Calendar cal = Calendar.getInstance();
-                cal.add( Calendar.DAY_OF_YEAR, -2 );
-                if ( buildDate.before(cal.getTime() ) )
-                {
-                    System.err.println( "WARNING: This build is more than 2 days old and there are likely updates available!" );
-                    System.err.println( "You will get no support with this build unless you update from http://ci.md-5.net/job/Spigot/" );
-                    System.err.println( "The server will start in 10 seconds!" );
-                    Thread.sleep( TimeUnit.SECONDS.toMillis( 10 ) );
-                }
-            }
-        }
         // Spigot End
         // Todo: Installation script
         OptionParser parser = new OptionParser() {
@@ -208,22 +184,6 @@ public class Main {
                     useConsole = false;
                 }
 
-                // Spigot Start
-                int maxPermGen = 0; // In kb
-                for ( String s : java.lang.management.ManagementFactory.getRuntimeMXBean().getInputArguments() )
-                {
-                    if ( s.startsWith( "-XX:MaxPermSize" ) )
-                    {
-                        maxPermGen = Integer.parseInt( s.replaceAll( "[^\\d]", "" ) );
-                        maxPermGen <<= 10 * ("kmg".indexOf( Character.toLowerCase( s.charAt( s.length() - 1 ) ) ) );
-                    }
-                }
-                if ( Float.parseFloat( System.getProperty( "java.class.version" ) ) < 52 && maxPermGen < ( 128 << 10 ) ) // 128mb
-                {
-                    System.out.println( "Warning, your max perm gen size is not set or less than 128mb. It is recommended you restart Java with the following argument: -XX:MaxPermSize=128M" );
-                    System.out.println( "Please see http://www.spigotmc.org/wiki/changing-permgen-size/ for more details and more in-depth instructions." );
-                }
-                // Spigot End
                 MinecraftServer.main(options);
             } catch (Throwable t) {
                 t.printStackTrace();
